# b2bHeadless

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
models/: __init__.py  exchanged_access_token_response.py  initial_access_token_response.py
mutations/: __init__.py  storefrontCustomerAccessTokenCreate.graphql
queries/: __init__.py  customerLocations.graphql  customerQuery.graphql
templates/: account.html  index.html  logout.html
utils/: dependencies.py  log.py  routes.py
